--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@google/generative-ai": "^0.21.0",
         "@sentry/node": "^8.33.1",
         "@sentry/profiling-node": "^8.33.1",
         "axios": "^1.7.7",
