--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "setup-env": "concurrently \"npm run server-env\" \"npm run client-env\"",
     "server-env": "cd server && concurrently \"npm run env\" \"npm run gemini\" \"npm run prompt\"",
     "client-env": "cd client && [ ! -f .env ] && cp .env.example .env",
-    "post-production": "concurrently \"npm run server\" \"npm run client-post\"",
+    "post-production": "concurrently \"cd server && npm run production\" \"npm run client-post\"",
     "client-post": "cd client && npm run build && cd build && python3 -m http.server",
     "lint": "concurrently \"npm run server-lint\" \"npm run client-lint\"",
     "server-lint": "cd server && npm run lint",
