--- a/client/public/.htaccess
+++ b/client/public/.htaccess
@@ -6,4 +6,19 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.html [L]
+
+  Header unset ETag
+  FileETag None
+</IfModule>
+
+<IfModule mod_headers.c>
+  Header set X-Content-Type-Options "nosniff"
+  Header always set X-Frame-Options "DENY"
+  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+  Header set X-XSS-Protection "1; mode=block"
+  
+  <FilesMatch "\.(jpg|jpeg|png|gif|webp|svg|woff|woff2|ttf|eot|ico)$">
+      Header set Cache-Control "public, max-age=1296000"
+  </FilesMatch>
+
 </IfModule>
