--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,6 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "express-mongo-sanitize": "^2.2.0",
-        "express-status-monitor": "^1.3.4",
         "helmet": "^8.0.0",
         "is-spaghetti-code": "^1.0.0",
         "jsdom": "^25.0.1",
@@ -59,5 +58,6 @@
     },
     "engines": {
         "node": ">=20.x"
-    }
+    },
+    "private": true
 }
