--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,7 @@
     "author": "The Freight Capstone Core 1",
     "scripts": {
         "build": "env-cmd -f ./.env vite build",
-        "lint": "eslint \"src/**/*.js\"",
-        "lint-fix": "eslint \"src/**/*.js\" --fix",
+        "lint": "eslint \"src/**/*.js\" --fix",
         "serve": "vite preview",
         "start": "vite --host",
         "test": "jest",
