--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm run start",
-    "setup": "concurrently \"npm run server-install\" \"npm run client-install\"",
-    "server-install": "cd server && npm i",
-    "client-install": "cd client && npm i",
-    "setup-env": "concurrently \"npm run server-env\" \"npm run client-env\"",
-    "server-env": "cd server && concurrently \"npm run env\" \"npm run gemini\" \"npm run prompt\"",
-    "client-env": "cd client && [ ! -f .env ] && cp .env.example .env",
-    "post-production": "concurrently \"cd server && npm run production\" \"npm run client-post\"",
-    "client-post": "cd client && npm run build && cd build && python3 -m http.server",
-    "lint": "concurrently \"npm run server-lint\" \"npm run client-lint\"",
-    "server-lint": "cd server && npm run lint",
-    "client-lint": "cd client && npm run lint",
-    "test": "concurrently \"npm run server-test\" \"npm run client-test\"",
-    "server-test": "cd server && npm run test",
-    "client-test": "cd client && npm run test",
+    "setup": "concurrently \"npm run server:install\" \"npm run client:install\"",
+    "server:install": "cd server && npm i",
+    "client:install": "cd client && npm i",
+    "setup:env": "concurrently \"npm run server:env\" \"npm run client:env\"",
+    "server:env": "cd server && concurrently \"npm run env\" \"npm run gemini\" \"npm run prompt\"",
+    "client:env": "cd client && [ ! -f .env ] && cp .env.example .env",
+    "post:production": "concurrently \"cd server && npm run production\" \"npm run client:post\"",
+    "client:post": "cd client && npm run build && cd build && python3 -m http.server",
+    "lint": "concurrently \"npm run server:lint\" \"npm run client:lint\"",
+    "server:lint": "cd server && npm run lint",
+    "client:lint": "cd client && npm run lint",
+    "test": "concurrently \"npm run server:test\" \"npm run client:test\"",
+    "server:test": "cd server && npm run test",
+    "client:test": "cd client && npm run test",
     "docker": "cd server && docker build -t core1-server .",
-    "docker-run": "docker run -p 5051:5051 --env-file .env core1-server:latest",
+    "docker:run": "docker run -p 5051:5051 --env-file .env core1-server:latest",
     "terraform": "cd server && terraform init && terraform plan -out=tfplan && terraform apply -auto-approve tfplan",
     "pm2": "pm2 start src/index.js --name core1",
-    "pm2-restart": "pm2 restart all --update-env",
-    "app": "cd mobile && npm run android"
+    "pm2:restart": "pm2 restart all --update-env",
+    "app": "cd mobile && npm run android",
+    "spellcheck": "npx --yes cspell --show-context --show-suggestions '**/*.*'"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
