--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,8 @@ MONGO_DB=core1
 
 NODE_ENV=development
 EXPRESS_PORT=5051
-REACT_APP_ORIGIN=http://localhost:3000
+EXT_EXPRESS_PORT=7000
+REACT_APP_ORIGIN=::1
 RECAPTCHA_SECRET=
 
 GOOGLE_OAUTH_CLIENT_ID=
