--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,14 +1,15 @@
-name: Labeler
+name: Label PR
 on: 
   pull_request_target:
 
 jobs:
-  label:
+  labels:
 
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
+    if: github.repository == 'freight-capstone/core1'
 
     steps:
     - uses: actions/checkout@v4
