--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,8 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     needs: [ docker ]
+    if: github.repository == 'freight-capstone/core1'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,7 +35,3 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
-
-      - name: Output Image ID
-        run: |
-          echo "Image ID: ${{ steps.plan.outputs.image_id }}"
