--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
         "production": "concurrently \"npm run env\" \"npm run gemini\" \"npm run prompt\" \"npm run start\"",
         "start": "node src/index",
         "test": "mocha --timeout 10000 --exit",
-        "dev": "nodemon --ext js --ignore '*.json' src/index",
+        "dev": "nodemon --ext js --ignore '*.json' --trace-deprecation src/index",
         "lint": "prettier --write .",
         "env": "[ ! -f .env ] && cp .env.example .env",
         "gemini": "[ ! -f .gemini.json ] && cp .gemini.example.json .gemini.json",
@@ -37,6 +37,7 @@
         "express": "^4.21.1",
         "express-mongo-sanitize": "^2.2.0",
         "helmet": "^8.0.0",
+        "http-proxy-middleware": "^3.0.3",
         "is-spaghetti-code": "^1.0.0",
         "jsdom": "^25.0.1",
         "mongodb": "^6.8.0",
