--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,81 +1,67 @@
 workflow:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: .github/**/*
+- changed-files:
+  - any-glob-to-any-file: '.github/**/*'
 
 client:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: client/src/**/*
+- changed-files:
+  - any-glob-to-any-file: 'client/src/**/*'
 
 server:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: server/src/**/*
+- changed-files:
+  - any-glob-to-any-file: 'server/src/**/*'
 
 mobile:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: mobile/app/**/*
+- changed-files:
+  - any-glob-to-any-file: 'mobile/app/**/*'
 
 auth:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['client/src/views/auth/**/*', 'client/src/components/middleware/Auth.jsx', 'server/src/components/auth/**/*', 'server/src/routes/v1/auth.js']
+- changed-files:
+  - any-glob-to-any-file: ['client/src/views/auth/**/*', 'client/src/components/middleware/Auth.jsx', 'server/src/components/auth/**/*', 'server/src/routes/v1/auth.js']
 
 routes:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: server/src/routes/**/*
+- changed-files:
+  - any-glob-to-any-file: 'server/src/routes/**/*'
 
 env:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['client/.env.example', 'server/.env.example']
+- changed-files:
+  - any-glob-to-any-file: ['client/.env.example', 'server/.env.example']
 
 dependencies:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['package.json', 'package-lock.json', 'client/package.json', 'client/package-lock.json', 'server/package.json', 'server/package-lock.json', 'mobile/package.json', 'mobile/package-lock.json']
+- changed-files:
+  - any-glob-to-any-file: ['package.json', 'package-lock.json', 'client/package.json', 'client/package-lock.json', 'server/package.json', 'server/package-lock.json', 'mobile/package.json', 'mobile/package-lock.json']
 
 documentation:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: server/docs/**/*
+- changed-files:
+  - any-glob-to-any-file: 'server/docs/**/*'
 
 test:
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['server/test/**/*', 'mobile/components/__tests__/**/*']
+- changed-files:
+  - any-glob-to-any-file: ['server/test/**/*', 'mobile/components/__tests__/**/*']
 
 container:
-- any:
-  - changed-files: ['server/Dockerfile', 'server/.dockerignore']
+- changed-files:
+  - any-glob-to-any-file: ['server/Dockerfile', 'server/.dockerignore']
 
 infra:
-- any:
-  - changed-files: server/main.tf
+- changed-files:
+  - any-glob-to-any-file: 'server/main.tf'
 
 vcs:
-- any:
-  - changed-files: ['.gitignore', 'server/.gitignore', 'client/.gitignore', 'mobile/.gitignore']
+- changed-files: 
+  - any-glob-to-any-file: ['.gitignore', 'server/.gitignore', 'client/.gitignore', 'mobile/.gitignore']
 
 'cargo-tracking':
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['client/src/views/track/**/*', 'server/src/routes/v1/track.js']
+- changed-files:
+  - any-glob-to-any-file: ['client/src/views/track/**/*', 'server/src/routes/v1/track.js']
 
 'order-management':
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['client/src/components/forms/**/*', 'client/src/views/freight/**/*', 'client/src/views/overview/**/*', 'server/src/routes/v1/freight.js']
+- changed-files:
+  - any-glob-to-any-file: ['client/src/components/forms/**/*', 'client/src/views/freight/**/*', 'client/src/views/overview/**/*', 'server/src/routes/v1/freight.js']
 
 'customer-communication-and-service':
-- any:
-  - changed-files:
-    - any-glob-to-any-file: ['client/src/views/support/**/*', 'client/firebase.js']
+- changed-files:
+  - any-glob-to-any-file: ['client/src/views/support/**/*', 'client/firebase.js']
 
 'rate-management':
-- any:
-  - changed-files:
-    - any-glob-to-any-file: client/src/views/pricing/**/*
+- changed-files:
+  - any-glob-to-any-file: 'client/src/views/pricing/**/*'
