--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
         "pino-pretty": "^11.2.2",
+        "prom-client": "^15.1.3",
         "ratelimit-header-parser": "^0.1.0",
         "ua-parser-js": "^1.0.39"
     },
