fix lint & refractor code

--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,11 @@
         "type": "git",
         "url": "git@github.com:freight-capstone/core1.git"
     },
-    "type": "module",
     "license": "MIT",
     "author": "The Freight Capstone Core 1",
     "scripts": {
         "build": "env-cmd -f ./.env vite build",
-        "lint": "eslint \"src/**/*.js\" --fix",
+        "lint": "eslint \"src/**/*.jsx\" --fix",
         "serve": "vite preview",
         "start": "vite --host",
         "test": "jest",
