--- a/client/package.json
+++ b/client/package.json
@@ -84,6 +84,7 @@
         "postcss": "^8.4.38",
         "prettier": "3.3.2",
         "sass": "^1.77.5",
+        "terser": "^5.36.0",
         "vite": "^5.4.7"
     },
     "engines": {
