--- a/client/package.json
+++ b/client/package.json
@@ -47,10 +47,12 @@
         "is-spaghetti-code": "^1.0.0",
         "js-cookie": "^3.0.5",
         "jsqr": "^1.4.0",
+        "moment": "^2.30.1",
         "prop-types": "^15.8.1",
         "qrcode.react": "^4.0.1",
         "ratelimit-header-parser": "^0.1.0",
         "react": "^18.3.1",
+        "react-big-calendar": "^1.15.0",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.9",
         "react-ga4": "^2.1.0",
