--- a/server/.env.example
+++ b/server/.env.example
@@ -27,6 +27,8 @@ GITHUB_AUTH_TOKEN=
 GITHUB_REPO=core1
 GITHUB_OWNER=freight-capstone
 
+GITHUB_WEBHOOK_SECRET=
+
 SENTRY_DNS=
 SENTRY_AUTH_TOKEN=
 SENTRY_ORGANIZATION_SLUG=freight-capstone
