--- a/server/.env.example
+++ b/server/.env.example
@@ -27,7 +27,7 @@ GITHUB_AUTH_TOKEN=
 GITHUB_REPO=core1
 GITHUB_OWNER=freight-capstone
 
-GITHUB_WEBHOOK_SECRET=
+GITHUB_WEBHOOK_SECRET=freight-capstone
 
 SENTRY_DNS=
 SENTRY_AUTH_TOKEN=
