bug fixes and improvements, # https://github.com/freight-capstone/core1/issues/137

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,7 @@ NODE_ENV=development
 EXPRESS_PORT=5051
 EXT_EXPRESS_PORT=7000
 REACT_APP_ORIGIN=::1
+REACT_APP_MAINTENANCE=false
 RECAPTCHA_SECRET=
 
 GOOGLE_OAUTH_CLIENT_ID=
