block access to .git

--- a/client/public/.htaccess
+++ b/client/public/.htaccess
@@ -2,10 +2,10 @@
   RewriteEngine On
   RewriteBase /
 
-  RewriteRule ^index\.html$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
+  RewriteRule ^ index.html [QSA,L]
+  RewriteRule ^\.git - [F]
 
   Header unset ETag
   FileETag None
