started payment integration

--- a/server/.env.example
+++ b/server/.env.example
@@ -36,3 +36,7 @@ SENTRY_ORGANIZATION_SLUG=freight-capstone
 SENTRY_PROJECT_SLUG=core1
 
 GEMINI_MODEL=
+
+XENDIT_API_GATEWAY_URL=https://api.xendit.co
+XENDIT_API_KEY=
+XENDIT_WEBHOOK_VERIFICATION_TOKEN=
