--- a/server/package.json
+++ b/server/package.json
@@ -53,7 +53,8 @@
         "pino-pretty": "^11.2.2",
         "prom-client": "^15.1.3",
         "ratelimit-header-parser": "^0.1.0",
-        "ua-parser-js": "^1.0.39"
+        "ua-parser-js": "^1.0.39",
+        "xendit-node": "^6.0.0"
     },
     "devDependencies": {
         "chai": "^5.1.1",
