--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,7 @@ MONGO_DB=core1
 NODE_ENV=development
 EXPRESS_PORT=5051
 EXT_EXPRESS_PORT=7000
+EXT_EXPRESS_PORT_1=9000
 REACT_APP_ORIGIN=::1
 REACT_APP_MAINTENANCE=false
 RECAPTCHA_SECRET=
