--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
         "prom-client": "^15.1.3",
         "ratelimit-header-parser": "^0.1.0",
         "request": "^2.88.2",
+        "socket.io": "^4.8.1",
         "ua-parser-js": "^1.0.39",
         "useragent": "^2.3.0",
         "xendit-node": "^6.0.0",
