--- a/client/package.json
+++ b/client/package.json
@@ -87,7 +87,8 @@
         "prettier": "3.3.2",
         "sass": "^1.77.5",
         "terser": "^5.36.0",
-        "vite": "^5.4.7"
+        "vite": "^5.4.7",
+        "vite-plugin-html-minifier": "^1.0.4"
     },
     "engines": {
         "node": ">=20.x"
