--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "server:test": "cd server && npm run test",
     "client:test": "cd client && npm run test",
     "docker": "cd server && docker build -t core1-server .",
-    "docker:run": "docker run -p 5051:5051 --env-file .env core1-server:latest",
+    "docker:run": "cd server && docker run -p 5051:5051 --env-file .env core1-server:latest",
     "terraform": "cd server && terraform init && terraform plan -out=tfplan && terraform apply -auto-approve tfplan",
-    "pm2": "pm2 start src/index.js --name core1-axleshift",
+    "pm2": "cd server && npm run pm2",
     "pm2:restart": "pm2 restart all --update-env",
     "app": "cd mobile && npm run android",
     "app:install": "cd mobile && npm i",
