--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,7 @@ MONGO_URL=
 MONGO_DB=core1
 
 NODE_ENV=development
+APP_KEY=freight-capstone
 EXPRESS_PORT=5051
 EXT_EXPRESS_PORT=7000
 EXT_EXPRESS_PORT_1=9000
