--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
         "env": "[ ! -f .env ] && cp .env.example .env",
         "gemini": "[ ! -f .gemini.json ] && cp .gemini.example.json .gemini.json",
         "prompt": "[ ! -f .prompt.json ] && cp .prompt.example.json .prompt.json",
-        "pm2": "pm2 start src/index.js --name core1-axleshift",
+        "pm2": "pm2 start ecosystem.config.cjs",
         "pm2:restart": "pm2 restart all --update-env"
     },
     "author": "The Freight Capstone Core 1",
