bug fixes and improvements

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,7 @@ REACT_APP_ORIGIN=::1
 REACT_APP_MAINTENANCE=false
 RECAPTCHA_SECRET=
 
+GOOGLE_MAP=
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_SECRET_ID=
 GITHUB_OAUTH_CLIENT_ID=
