--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         
       - name: Install dependencies
         run: |
-          npm i
+          npm ci
           npm run setup
 
       - name: Executing lint test
@@ -66,6 +66,11 @@ jobs:
           cp .github/workflows/docker.yml server/.github/workflows/
           cp .github/workflows/terraform.yml server/.github/workflows/
 
+      - name: Get latest commit hash
+        run: |
+          echo "MASTER_COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "COMMIT_URL=https://github.com/${{ github.repository }}/commit/$(git rev-parse HEAD)" >> $GITHUB_ENV
+
       - name: Push frontend
         id: push_directory_frontend
         uses: cpina/github-action-push-to-another-repository@main
@@ -75,8 +80,9 @@ jobs:
           source-directory: client/build
           destination-github-username: 'freight-capstone'
           destination-repository-name: 'core1'
-          user-email: mrepol742@gmail.com
-          commit-message: Production
+          user-name: github-actions[bot]
+          user-email: github-actions[bot]@users.noreply.github.com
+          commit-message: "Build from ${{ env.COMMIT_URL }}"
           target-branch: core1-frontend
 
       - name: Push backend
@@ -88,6 +94,7 @@ jobs:
           source-directory: server/
           destination-github-username: 'freight-capstone'
           destination-repository-name: 'core1'
-          user-email: mrepol742@gmail.com
-          commit-message: Production
+          user-name: github-actions[bot]
+          user-email: github-actions[bot]@users.noreply.github.com
+          commit-message: "Build from ${{ env.COMMIT_URL }}"
           target-branch: core1-backend
