changes in workflows

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   greetings:
   
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     permissions:
       issues: write
       pull-requests: write
