--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   labels:
 
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     permissions:
       contents: read
       pull-requests: write
