--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "description": "",
     "dependencies": {
         "@google/generative-ai": "^0.21.0",
+        "@prisma/client": "^6.3.1",
         "@sentry/node": "^8.52.0",
         "@sentry/profiling-node": "^8.52.0",
         "axios": "^1.7.7",
@@ -50,6 +51,7 @@
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
         "pino-pretty": "^11.2.2",
+        "prisma": "^6.3.1",
         "prom-client": "^15.1.3",
         "ratelimit-header-parser": "^0.1.0",
         "request": "^2.88.2",
