rename lint to global name pretty

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "client:env": "cd client && [ ! -f .env ] && cp .env.example .env",
     "post:production": "concurrently \"cd server && npm run production\" \"npm run client:post\"",
     "client:post": "cd client && npm run build && cd build && python3 -m http.server",
-    "lint": "concurrently \"npm run server:lint\" \"npm run client:lint\"",
-    "server:lint": "cd server && npm run lint",
-    "client:lint": "cd client && npm run lint",
+    "pretty": "concurrently \"npm run server:pretty\" \"npm run client:pretty\"",
+    "server:pretty": "cd server && npm run pretty",
+    "client:pretty": "cd client && npm run pretty",
     "test": "concurrently \"npm run server:test\" \"npm run client:test\"",
     "server:test": "cd server && npm run test",
     "client:test": "cd client && npm run test",
