--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
         "start": "node src/index",
         "test": "mocha --timeout 10000 --exit",
         "dev": "nodemon --ext js --ignore '*.json' --trace-deprecation --trace-warnings src/index",
-        "lint": "prettier --write .",
+        "pretty": "prettier --write .",
         "env": "[ ! -f .env ] && cp .env.example .env",
         "gemini": "[ ! -f .gemini.json ] && cp .gemini.example.json .gemini.json",
         "prompt": "[ ! -f .prompt.json ] && cp .prompt.example.json .prompt.json",
