--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
         "@sentry/profiling-node": "^8.52.0",
         "axios": "^1.7.7",
         "boolean-pro": "^1.0.0",
+        "chokidar": "^4.0.3",
         "compression": "^1.7.4",
         "concurrently": "^9.0.1",
         "cors": "^2.8.5",
