--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
         "html2canvas": "^1.4.1",
         "is-spaghetti-code": "^1.0.0",
         "js-cookie": "^3.0.5",
+        "jspdf": "^3.0.0",
         "jsqr": "^1.4.0",
         "moment": "^2.30.1",
         "prop-types": "^15.8.1",
