bug fixes and improvements

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-MONGO_URL=
+MONGO_URL=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.4.2
 MONGO_DB=core1
 
 NODE_ENV=development
