--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
         "helmet": "^8.0.0",
         "http-proxy-middleware": "^3.0.3",
         "inspirational-quotes": "^2.0.1",
+        "ioredis": "^5.6.0",
         "is-spaghetti-code": "^1.0.0",
         "jsdom": "^25.0.1",
         "mongodb": "^6.8.0",
