--- a/server/.env.example
+++ b/server/.env.example
@@ -48,3 +48,8 @@ XENDIT_WEBHOOK_VERIFICATION_TOKEN=
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
