--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.758.0",
         "@google/generative-ai": "^0.21.0",
         "@prisma/client": "^6.3.1",
         "@sentry/node": "^8.52.0",
@@ -37,7 +38,7 @@
         "concurrently": "^9.0.1",
         "cors": "^2.8.5",
         "dompurify": "^3.1.7",
-        "dotenv": "^16.4.5",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-mongo-sanitize": "^2.2.0",
         "helmet": "^8.0.0",
@@ -48,6 +49,7 @@
         "jsdom": "^25.0.1",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.15",
         "pino": "^9.3.2",
