--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
         "jspdf": "^3.0.0",
         "jsqr": "^1.4.0",
         "moment": "^2.30.1",
+        "pako": "^2.1.0",
         "prop-types": "^15.8.1",
         "qrcode.react": "^4.0.1",
         "ratelimit-header-parser": "^0.1.0",
