--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
         "gemini": "[ ! -f .gemini.json ] && cp .gemini.example.json .gemini.json",
         "prompt": "[ ! -f .prompt.json ] && cp .prompt.example.json .prompt.json",
         "pm2": "pm2 start ecosystem.config.cjs",
-        "pm2:restart": "pm2 restart all --update-env"
+        "pm2:restart": "pm2 restart all --update-env",
+        "db:seed": "node src/models/seeders/DatabaseSeeders.js"
     },
     "author": "The Freight Capstone Core 1",
     "license": "MIT",
