rename axleshift core 1 to axleshift

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Core1",
-    "name": "Axleshift Core 1",
+    "name": "Axleshift",
     "icons": [
         {
             "src": "./favicon.png",
