--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Core1",
-    "name": "Axleshift",
+    "short_name": "Axleshift",
+    "name": "Axleshift - Your Shipment Our Platform",
     "icons": [
         {
             "src": "./favicon.png",
