--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
         "ratelimit-header-parser": "^0.1.0",
         "react": "^18.3.1",
         "react-big-calendar": "^1.18.0",
+        "react-bootstrap": "^2.10.9",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.9",
         "react-ga4": "^2.1.0",
