--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "description": "",
     "dependencies": {
         "@aws-sdk/client-s3": "^3.758.0",
+        "@aws-sdk/lib-storage": "^3.779.0",
+        "@aws-sdk/s3-request-presigner": "^3.779.0",
         "@google/generative-ai": "^0.21.0",
         "@sentry/node": "^8.52.0",
         "@sentry/profiling-node": "^8.55.0",
@@ -46,7 +48,6 @@
         "is-spaghetti-code": "^1.0.0",
         "mongodb": "^6.15.0",
         "multer": "^1.4.5-lts.1",
-        "multer-s3": "^3.0.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.15",
         "pino": "^9.3.2",
