--- a/server/.env.example
+++ b/server/.env.example
@@ -42,5 +42,5 @@ XENDIT_WEBHOOK_VERIFICATION_TOKEN=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_BUCKET_NAME=
+AWS_REGION=ap-southeast-2
+AWS_BUCKET_NAME=axleshift
