--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
         "react-dropzone": "^14.2.9",
         "react-ga4": "^2.1.0",
         "react-google-recaptcha": "^3.1.0",
+        "react-helmet": "^6.1.0",
         "react-i18next": "^15.0.2",
         "react-masonry-css": "^1.0.16",
         "react-redux": "^9.1.2",
