added page tours https://github.com/freight-capstone/core1/issues/167

--- a/client/package.json
+++ b/client/package.json
@@ -35,9 +35,11 @@
         "@popperjs/core": "^2.11.8",
         "@react-google-maps/api": "^2.19.3",
         "@react-oauth/google": "^0.12.1",
+        "@reactour/tour": "^3.7.0",
         "@sentry/react": "^8.33.1",
         "aos": "^2.3.4",
         "axios": "^1.8.4",
+        "body-scroll-lock": "^4.0.0-beta.0",
         "boolean-pro": "^1.0.0",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
