added redis to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           mongodb-version: 'latest'
 
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.7.0
+        with:
+          redis-version: 7
+
       - name: Set up environment
         run: |
           cd client
