--- a/client/.env.example
+++ b/client/.env.example
@@ -20,3 +20,5 @@ VITE_APP_FIREBASE_STORAGE_BUCKET=
 VITE_APP_FIREBASE_MESSAGING_SENDER_ID=
 VITE_APP_FIREBASE_APP_ID=
 VITE_APP_FIREBASE_MEASUREMENT_ID=
+
+VITE_APP_AWS_S3=
