--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
         "boolean-pro": "^1.0.0",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
+        "date-holidays": "^3.24.1",
         "dompurify": "^3.2.4",
         "dotenv": "^16.4.5",
         "firebase": "^11.2.0",
@@ -60,7 +61,6 @@
         "qrcode.react": "^4.0.1",
         "ratelimit-header-parser": "^0.1.0",
         "react": "^18.3.1",
-        "react-big-calendar": "^1.18.0",
         "react-bootstrap": "^2.10.9",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.9",
