--- a/server/.env.example
+++ b/server/.env.example
@@ -11,8 +11,12 @@ RECAPTCHA_SECRET=
 GOOGLE_MAP=
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_SECRET_ID=
+
 GITHUB_OAUTH_CLIENT_ID=
 GITHUB_OAUTH_SECRET_ID=
+
+MICROSOFT_OAUTH_CLIENT_ID=
+MICROSOFT_OAUTH_SECRET_ID=
 
 API_RATE_LIMIT=30
 API_EXTERNAL_RATE_LIMIT=1000
