--- a/client/.env.example
+++ b/client/.env.example
@@ -12,6 +12,7 @@ VITE_APP_GOOGLE_MAP=
 
 VITE_APP_GOOGLE_OAUTH_CLIENT_ID=
 VITE_APP_GITHUB_OAUTH_CLIENT_ID=
+VITE_APP_MICROSOFT_OAUTH_CLIENT_ID=
 
 VITE_APP_FIREBASE_API_KEY=
 VITE_APP_FIREBASE_AUTH_DOMAIN=
