--- a/client/package.json
+++ b/client/package.json
@@ -98,6 +98,7 @@
         "sass": "^1.77.5",
         "terser": "^5.36.0",
         "vite": "^6.2.5",
+        "vite-plugin-banner": "^0.8.0",
         "vite-plugin-html-minifier": "^1.0.5"
     },
     "engines": {
