--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "@google/generative-ai": "^0.21.0",
         "@sentry/node": "^8.52.0",
         "@sentry/profiling-node": "^8.55.0",
+        "archiver-zip-encrypted": "^2.0.0",
         "axios": "^1.8.4",
         "boolean-pro": "^1.0.0",
         "compression": "^1.7.4",
@@ -49,6 +50,7 @@
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.15",
+        "pdf-lib": "^1.17.1",
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
         "pino-pretty": "^11.2.2",
