--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
         "boolean-pro": "^1.0.0",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
+        "date-fns": "^4.1.0",
         "date-holidays": "^3.24.1",
         "dompurify": "^3.2.4",
         "dotenv": "^16.4.5",
@@ -62,6 +63,7 @@
         "ratelimit-header-parser": "^0.1.0",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.9",
+        "react-date-range": "^2.0.1",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.9",
         "react-ga4": "^2.1.0",
