--- a/server/package.json
+++ b/server/package.json
@@ -60,6 +60,7 @@
         "ua-parser-js": "^1.0.39",
         "useragent": "^2.3.0",
         "xendit-node": "^6.0.0",
+        "xlsx": "^0.18.5",
         "zxcvbn": "^4.4.2"
     },
     "devDependencies": {
